--- a/style.css
+++ b/style.css
@@ -29,11 +29,13 @@ body{
 }
 
 .manager{
-    height:100%;
+    height:90%;
+    overflow-y: auto;
 }
 
 .manager li{
-    padding: 2px 5px;
+    padding: 10px 40px;
+    border-bottom: 1px solid lightgray;
 }
 
 .manager li:hover{
@@ -67,15 +69,16 @@ body{
 }
 
 .container{
-    width: 60%;
+    width: 70%;
     margin-top: 5%;
+    height: 90%;
 }
 
 .row{
     display: flex;
     flex-direction: row;
     padding: 5px;
-    border: 1px solid black;
+    border-bottom: 1px solid black;
     justify-content: space-between;
 }
 
@@ -89,22 +92,19 @@ body{
     box-shadow: 0px 0px 16px 3px rgba(173,173,173,1);
 }
 
-.file::before, .img::before, .folder::before{
-    content: "";
-    width: 20px;
-    height: 20px;
+.folder, .file{
+    background-size: 30px;
+    background-repeat: no-repeat;
+    background-position-y: 40%;
+    background-position-x: 3%;
 }
 
-.img::before{
-    background-color: red;
+.folder{
+    background-image: url("images/folder.png");
 }
 
-.folder::before{
-    background-color: green;
-}
-
-.file::before{
-    background-color: black;
+.file{
+    background-image: url("images/file.png");
 }
 
 .modal{
